--- a/src/App.css
+++ b/src/App.css
@@ -614,3 +614,100 @@ ul.CTAs a {
   font-size: 0.8rem;
   color: grey;
 }
+
+
+
+
+
+/*Below is the css for the footer*/
+.bg-grey {
+  background: #232f3e;
+}
+.logo-footer {
+  margin-bottom: 40px;
+}
+footer {
+      color: grey;
+}
+footer p, a {
+  font-size: 16px;
+font-family: 'Amazon Ember';
+}
+footer h5 {
+font-family: 'Amazon Ember';
+margin-bottom: 40px;
+position: relative;
+}
+footer h5:after {
+position: absolute;
+content: "";
+background: grey;
+width: 12%;
+height: 1px;
+left: 0;
+bottom: -20px;
+}
+.btn-footer {
+           color: grey;
+        
+          text-decoration: none;
+          border: 1px solid;
+          border-radius: 43px;
+          font-size: 13px;
+          padding: 7px 30px;
+          line-height: 47px;
+}
+.btn-footer:hover {
+ text-decoration: none;
+        
+}
+.form-footer input[type="text"] {
+border: none;
+border-radius: 16px 0 0 16px;
+outline: none;
+padding-left: 10px;
+
+}
+::placeholder {
+font-size: 12px;
+padding-left: 10px;
+font-style: italic;
+}
+.form-footer input[type="button"] {
+border: none;
+background:#232323;
+  margin-left: -5px;
+color: #fff;
+outline: none;
+border-radius: 0 16px 16px 0;
+padding: 2px 12px;
+}
+.social .fa {
+color: grey;
+font-size: 22px;
+padding: 10px 15px;
+}
+.social .fa:hover{
+  color: #f5f5f5 !important; 
+}
+footer ul li {
+list-style: none;
+display: block;
+}
+footer ul  {
+padding-left: 0;
+}
+footer ul  li a{
+text-decoration: none;
+color: grey;
+text-decoration:none;
+}
+a:hover {
+text-decoration: none;
+color: #f5f5f5 !important;
+
+}
+footer .logo-part {
+border-right: 1px solid grey;
+height: 100%;
+}
