--- a/src/App.css
+++ b/src/App.css
@@ -703,7 +703,8 @@ text-decoration: none;
 color: #f5f5f5 !important;
 
 }
-footer .logo-part {
+.logo-part {
 border-right: 1px solid grey;
 height: 100%;
 }
+ 
