--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@ body {
   padding: 0px;
   overflow-x: hidden;
 }
-
 /* Scroll Bar */
 
 ::-webkit-scrollbar-track {
@@ -24,6 +23,11 @@ body {
   border: 0px;
   background-clip: padding-box;
   border-radius: 5px;
+}
+
+.App{
+  position: relative;
+  min-height: 100vh;
 }
 
 nav {
@@ -607,24 +611,24 @@ ul.CTAs a {
   color: grey;
 }
 
-
-
-
-
 /*Below is the css for the footer*/
 .bg-grey {
   background: #232f3e;
 }
+footer {
+  position: absolute;
+  color: grey;
+  bottom: 0 !important;
+  left: 0; 
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 .logo-footer {
   margin-bottom: 40px;
 }
-footer {
-  position: absolute;
-  margin-top: 8rem;
-  color: grey;
-  bottom: 0; 
-  width: 100%;
-}
+
 footer p, a {
   font-size: 16px;
 font-family: 'Amazon Ember';
@@ -707,4 +711,13 @@ color: #f5f5f5 !important;
 border-right: 1px solid grey;
 height: 100%;
 }
- 
+
+.home {
+  padding-bottom: 354px;
+}
+
+@media screen  and (max-width: 768px){
+.home{
+  padding-bottom: 1200px;
+}
+}
