--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,6 @@ nav {
 .card-title a {
   color: #2e2e2e;
 }
-
 .card-title a:hover {
   color: #fa9c23;
   text-decoration: none;
@@ -625,8 +624,11 @@ footer {
   flex-direction: column;
   justify-content: space-between;
 }
+footer .foot{
+  margin:10px;
+}
 .logo-footer {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 footer p, a {
