--- a/src/App.css
+++ b/src/App.css
@@ -620,6 +620,7 @@ footer {
   bottom: 0 !important;
   left: 0; 
   width: 100%;
+  background-color:#232f3e !important;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -636,6 +637,7 @@ footer p, a {
 font-family: 'Amazon Ember';
 }
 footer h5 {
+color:white;
 font-family: 'Amazon Ember';
 margin-bottom: 40px;
 position: relative;
