--- a/src/App.css
+++ b/src/App.css
@@ -469,7 +469,6 @@ nav {
   align-items: stretch;
   min-height: 100vh;
   font-weight: normal;
-
   margin-top: 0;
   height: 100%;
   left: 0;
@@ -505,7 +504,7 @@ nav {
 }
 #sidebar ul li a:hover {
   color: #232f3e;
-  background: #fff;
+  background: black;
 }
 
 #sidebar ul li a i {
